--- a/package.json
+++ b/package.json
@@ -6,14 +6,22 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "connect-ensure-login": "^0.1.1",
+    "cookie-parser": "^1.4.5",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
-    "express": "~4.16.1"
+    "express": "~4.16.1",
+    "express-session": "^1.17.0",
+    "mongodb": "^3.5.5",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-react": "^7.19.0",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.2",
     "prettier": "^2.0.2"
   }
