--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "connect-ensure-login": "^0.1.1",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
